@@ -43,12 +43,13 @@ my %holidays_name_2020 = (
 	'5/5'  => 'こどもの日',
 	'7/23' => '海の日',
 	'7/24' => 'スポーツの日',
-	'8/10' => '山の日',
+	'8/11' => '山の日',
 	'9/-3' => '敬老の日',
 	'9/shubun' => '秋分の日',
 	'11/3' => '文化の日',
 	'11/23'=> '勤労感謝の日',
-	'12/23'=> '天皇誕生日',
+	'13/1' => '国民の休日',
+	'13/2' => '振り替え休日'
 );
 #------------------------------------------------------------------------------
 # ●コンストラクタ（無名クラスを生成する）
