@@ -2,6 +2,8 @@
 
 *Ver3.34 : 2020/01/xx
 
+-【Fix/Plugin】2020年のカレンダーの祝日情報が正しくない。（[https://adiary.adiary.jp/0416#c1:Thanks to さばぞう]）
+
 *Ver3.33 : 2020/01/09
 
 -記事エクスポートの改善。
